syntax = "proto3";

package tracker;

service Tracker {
    rpc Search(SearchRequest) returns (SearchResponse);
    rpc GetSupportCouriers(SupportCouriersRequest) returns (SupportCouriersResponse);

    rpc AddTrack(AddTrackRequest) returns (AddTrackResponse);
    rpc RemoveTrack(RemoveTrackRequest) returns (RemoveTrackResponse);
    rpc TrackingList(TrackingListRequest) returns (TrackingListResponse);
}

enum StatusKind {
    OK = 0;
    REQUEST_FAILED = 1;
    WRONG_TRACKING_NUMBER = 2;
    NOT_EXISTS_TRACKING_NUMBER = 3;
    TRACKING_ALREADY_EXISTS = 4;
    TRACKING_NOT_EXISTS = 5;
}

message SearchRequest {
    string courier_id = 1;
    string tracking_number = 2;
}

message SearchResponse {
    StatusKind status = 1;
    optional string message = 2;
    TrackingInfo tracking_info = 3;
}

message TrackingInfo {
    string id = 1;
    string name = 2;
    string url = 3;
    string tracking_number = 4;
    bool is_delivered = 5;
    optional string sender = 6;
    optional string receiver = 7;
    optional string product = 8;
    repeated TrackingDetail tracks = 9;
}

message TrackingDetail {
    string time = 1;
    optional string message = 2;
    optional string status = 3;
    optional string location = 4;
    optional string live_tracking_url = 5;
}

message SupportCouriersRequest {
    string tracking_number = 1;
}

message SupportCouriersResponse {
    repeated SupportCouriersDetail couriers = 1;
}

message SupportCouriersDetail {
    string id = 1;
    string name = 2;
}

message AddTrackRequest {
    string user_id = 1;
    string courier_id = 2;
    string tracking_number = 3;
}

message AddTrackResponse {
    StatusKind status = 1;
    optional SearchResponse response = 2;
}

message RemoveTrackRequest {
    string user_id = 1;
    string courier_id = 2;
    string tracking_number = 3;
}

message RemoveTrackResponse {
    StatusKind status = 1;
}

message TrackingListRequest {
    string user_id = 1;
}

message TrackingListResponse {
    repeated TrackingInfo tracks = 1;
}